# open-clank

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaksignore  AGENTS.md  CONTRIBUTING.md  MEATBAGS.md  README.md  app.py  docker-compose.gpu-amd.yml  docker-compose.gpu-nvidia.yml  docker-compose.yml  henxels.yaml  launcher.py  open.sh  package.json  requirements.txt
.futures/: option-a-v2-P1-memory-capture.md  option-a-v2-P2-boot-test.md  option-a-v2-P3-permission-ux.md  option-a-v2-P4-terminal.md  option-a-v2-P5-env-example.md  option-a-v2-meta.md
.github/: pull_request_template.md
.mimocode/: .cron-lock
companion/: routes.py
core/: auth.py  database.py  models.py  session_manager.py
docs/: agent-tool-parity.md  identity-architecture.md  index.html  memory-architecture.md  setup.md
harness/: openthesius-mimo.service
mcp_servers/: email_server.py  memory_server.py
mcp_servers/frankenmemory/crates/fm-core/: Cargo.toml
mcp_servers/frankenmemory/crates/fm-core/src/: code.rs  config.rs  cue.rs  embed.rs  graph.rs  lib.rs  record.rs
mcp_servers/frankenmemory/crates/fm-core/src/curate/: decay.rs  dedup.rs  mod.rs  questions.rs  reflect.rs
mcp_servers/frankenmemory/crates/fm-core/src/layer/: layer_a.rs  layer_b.rs  mod.rs
mcp_servers/frankenmemory/crates/fm-core/src/provider/: memos.rs  mod.rs  native.rs  tencent.rs
mcp_servers/frankenmemory/crates/fm-core/src/retrieval/: collapse.rs  ground_truth.rs  mod.rs  rrf.rs
mcp_servers/frankenmemory/crates/fm-core/src/store/: graph.rs  mod.rs  sqlite.rs
mcp_servers/frankenmemory/crates/fm-core/tests/: integration.rs
mcp_servers/frankenmemory/crates/fm-mcp/: Cargo.toml
mcp_servers/frankenmemory/crates/fm-mcp/src/: main.rs
routes/: admin_wipe_routes.py  assistant_routes.py  auth_routes.py  backup_routes.py  calendar_routes.py  chat_helpers.py  chat_routes.py  chatgpt_subscription_routes.py  compare_routes.py  cookbook_routes.py  copal_routes.py  copal_treehouse_routes.py  email_pollers.py  (+18 more)
(+333 files in other folders)
