[package]
name = "fm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
schemars = "1"
blake2 = { workspace = true }
rusqlite = { version = "0.35", features = ["bundled", "vtab"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
lru = "0.12"
tree-sitter = "0.26.10"
tree-sitter-rust = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-typescript = "0.23.2"
blake3 = "1.8.5"

[features]
default = ["http-embed"]
http-embed = ["reqwest"]
